--- a/models/identification/identification_ch2.qmd
+++ b/models/identification/identification_ch2.qmd
@@ -223,3 +223,5 @@ plot_diagnostics(fit_new_2)
 For some very odd reason whenever this is run by command this gives very different results than the output from rendering the html file... Because of different initializations? I tried this about 2 times and it is consistenty different. It is possible that for even extremer values of $\kappa$ the extremism might reduce stochastic variability in a way that makes the model converge better again, this I have to figure out as well. But it doesnt make sense that the results depend from where the code is run. I need to fix this \[#todo:\].
 :::
 It is even worse! So I find that if I change the DGP such that the thinning probabilities are concentrated more towards 0 or 1, we get bad sampling properties that hint at an identification problem. In other words, the model sampling breaks down if the sampler finds that thinning is **extreme** or **not substantially happening** for a sufficiently large number of data points. My intuition is telling me that the $\pi$'s look a lot like the case where X is binary, i.e. they do no sufficiently exploit the curvature along the logistic function.
+
+So the next testable claim would be: Pick X's that are sufficiently varying and imply a sufficiently balanced support of thinning probabilities. This is what I will do in the next chapter.
