--- a/models/identification/identification_ch3.qmd
+++ b/models/identification/identification_ch3.qmd
@@ -135,5 +135,4 @@ fit_new$summary() |>
 plot_diagnostics(fit_new)
 ```
 
-
-So not only does this model have worse convergence stats, but the posteriors are also wrong! This if of course consistent with an identification problem. So this might be it. I will go back to the real data and see if I can perhaps pool some tracts/zips to get more spread support on x. (Probably if I used more chains on more initialisation values I can also get no mixing, and another peak on the true values...)
+So not only does this model have worse convergence stats, but the posteriors are also wrong! This if of course consistent with an identification problem. So this might be it. I will go back to the real data and see if I can perhaps pool some tracts/zips to get more spread support on x. (Probably if I used more chains on more initialisation values I can also get no mixing, and another peak on the true values...?)
