--- a/models/identification/identification_ch2.qmd
+++ b/models/identification/identification_ch2.qmd
@@ -9,9 +9,9 @@ Part 1 covered some first modifications of the most simple pogit in search of wh
 
 In the real data, we also have identification issues **even if** the logit variables are few and barely correlated at all. So we must look elsewhere.
 
-My other suspicion was that identification in the real data fails because of particularities of the DGP. On paper, if e.g. both $X$ and $Z$ are binary, I think that identification of the poisson parameters is impossible. With continuous data, I first I thought that maybe identification fails if there is a high concentration of data points for which the logit probability has sufficiently little curvature. My first thought was that this would create something like a multicollinearity problem in the rate product $\mu_i \cdot \pi_i$ for the thinned poisson rate, but since only $\log(\mu_i)$ is linear in x, this is not the right explanation. However, I do suspect that the shape of our x's are important to understand the identification problem.
+My other suspicion was that identification in the real data fails because of particularities of the DGP. On paper, if e.g. both $X$ and $Z$ are binary, I think that (without further restrictions) identification of the poisson parameters is impossible. With continuous data, I first I thought that maybe identification fails if there is a high concentration of data points for which the logit probability has sufficiently little curvature. 
 
-In this chapter I'll try to dive a little into the dgp-related questions that might be related to breaking the sampling for Rhode Island and some of the tracts I've tried. There I observed that the implied thinning probabilities (implied by the great mass of parameter values sampled by the four chains, even though poorly converging) are concentrated at 1. The main question in the back of my mind is if there is a **general** identification issues where **we can never rule** out high thinning rates ($\pi$) and low occurence rates ($\mu$) if we put X in the logit, or if this a particular feature of a DGP that would make identification difficult for the sampler. My prior is that its the former...
+Here I'll try to dive a little into the dgp-related questions that might be related to breaking the sampling for Rhode Island and some of the tracts I've tried. There I observed that the implied thinning probabilities (implied by the great mass of parameter values sampled by the four chains, even though poorly converging) are concentrated at 1. The main question in the back of my mind is if there is a **general** identification issues where **we can never rule** out high thinning rates ($\pi$) and low occurence rates ($\mu$) if we put X in the logit, or if this a particular feature of a DGP that would make identification difficult for the sampler (which is very unlikely to be the case).
 
 ## Something about the curvature?
 
