--- a/US/exploration/tract_states_descriptives.Rmd
+++ b/US/exploration/tract_states_descriptives.Rmd
@@ -11,6 +11,7 @@ library(jsonlite)
 source("../../init.R")
 source("load_and_preprocess.R")
 ```
+
 Getting metadata
 ```{r}
 # get metadata from ~US root
@@ -27,26 +28,77 @@ count_variables <- metadata$count_variables
 source("compute_descriptives.R")
 ```
 
-### TRACT states
+# TRACT states
+
 ```{r}
 print(tract_states)
 ```
+
+## Ohio
+
 ```{r}
 data_summary("OH", year = NULL)
 ```
+
+```{r}
+# get 2010 data, and put log over black and poor props before fitting
+log_pp <- \(x){x |> mutate(black_ppl_propE = log(black_ppl_propE), poor_fam_propE = log(poor_fam_propE))}
+oh_merged_2010 <- single_state_tract("OH", filter_year = 2010, pred_preprocess_func = log_pp)
+```
+The logged predictors are less skewed and have more smoothly spread support.
+
+```{r}
+data_summary(oh_merged_2010)
+```
+```{r}
+lead_count_model_summary(oh_merged_2010)
+```
+
+```{r}
+pr_tested_model_summary(oh_merged_2010)
+```
+
 ```{r}
 data_summary("PA", year = NULL)
 ```
 ```{r}
+lead_count_model_summary("PA", year = 2007)
+```
+
+```{r}
+pr_tested_model_summary("PA", year = 2007)
+```
+
+
+```{r}
 data_summary("CO", year = NULL)
 ```
+```{r}
+lead_count_model_summary("CO", year = 2014)
+```
+```{r}
+pr_tested_model_summary("CO", year = 2014)
+```
+
 
 ```{r}
 data_summary("MD", year = NULL)
 ```
+```{r}
+lead_count_model_summary("MD", year = 2011)
+```
+```{r}
+pr_tested_model_summary("MD", year = 2011)
+```
 
 ```{r}
 data_summary("MA", year = NULL)
+```
+```{r}
+lead_count_model_summary("MA", year = 2014)
+```
+```{r}
+pr_tested_model_summary(ma_merged)
 ```
 
 ```{r}
@@ -58,20 +110,33 @@ NYC is not available.
 ```{r}
 data_summary("NC", year = NULL)
 ```
+```{r}
+lead_count_model_summary("NC", year = 2014)
+```
+```{r}
+pr_tested_model_summary("NC", year = 2014)
+```
 
 ```{r}
 data_summary("IN", year = NULL)
 ```
+```{r}
+lead_count_model_summary("IN", year = 2013)
+```
+```{r}
+pr_tested_model_summary("IN", year = 2013)
+```
+
 
 ```{r}
 data_summary("OR", year = NULL)
 ```
 
 ```{r}
-data_summary("NH", year = NULL)
+data_summary("NH", year = 2010)
 ```
 
 ```{r}
-data_summary("WI", year = NULL)
+data_summary("WI", year = 2010)
 ```
 
